# cmake_example

./: CMakeLists.txt  main.cpp
support/: CMakeLists.txt  movie.cpp  movie.h
support/allocators/: CMakeLists.txt  secure.h
